Fix sizing and gap

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     display: flex;
     flex-direction: column;
-    gap: 100px;
+    gap: 60px;
     background-color: burlywood;
 }
 
@@ -22,7 +22,7 @@ header {
 }
 
 header .description {
-    font-size: 25px;
+    font-size: 22px;
 }
 
 header p, header h1 {
@@ -30,14 +30,13 @@ header p, header h1 {
 }
 
 header h1 {
-    font-size: 75px;
+    font-size: 60px;
 }
 
 .choice-container {
     display: flex;
     justify-content: center;
     gap: 100px;
-    padding-bottom: 100px;
 }
 
 .choice, .restart {
@@ -51,5 +50,5 @@ header h1 {
 
 .textResult {
     text-align: center;
-    font-size: 50px;
+    font-size: 35px;
 }
